--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --target app",
+    "build-server": "tsc --project ./",
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
+    "server": "nodemon server/index.ts",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint --target app"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -33,6 +37,8 @@
     "prettier": "^1.19.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
