--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
     "server": "nodemon server/index.ts",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint-app": "vue-cli-service lint",
+    "lint-server": "eslint . --ext .ts"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -21,6 +22,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
@@ -31,7 +34,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
