--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
     "server": "nodemon server/index.ts",
+    "server-static": "npm run build-server && node dist/server/index.js",
     "test:unit": "vue-cli-service test:unit",
     "lint-app": "vue-cli-service lint",
-    "lint-server": "eslint . --ext .ts"
+    "lint-server": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "nodemon": "^2.0.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -22,6 +27,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.7",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
