--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server-static": "npm run build-server && node dist/server/index.js",
     "test:unit": "vue-cli-service test:unit",
     "lint-app": "vue-cli-service lint",
-    "lint-server": "eslint . --ext .ts"
+    "lint-server": "eslint . --ext .ts",
+    "lint-server-fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,6 +19,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
     "helmet": "^4.1.1",
     "nodemon": "^2.0.4",
     "register-service-worker": "^1.7.1",
@@ -29,6 +31,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/express-handlebars": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
