--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test:unit": "vue-cli-service test:unit",
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
     "build-server": "tsc --project ./",
@@ -11,7 +10,9 @@
     "lint-server": "eslint . --ext .ts",
     "lint-server-fix": "eslint . --ext .ts --fix",
     "server": "nodemon server/index.ts",
-    "server-static": "npm run build-server && node dist/server/index.js"
+    "server-static": "npm run build-server && node dist/server/index.js",
+    "test-app": "jest --config jest-app.config.js || exit 0",
+    "test-server": "jest --config jest-server.config.js || exit 0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -47,7 +48,10 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.4.2",
+    "jest-puppeteer": "^4.4.0",
     "prettier": "^1.19.1",
+    "puppeteer": "^5.3.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "ts-node": "^9.0.0",
