Adding function return types, separating eslint rules for the app and server

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
     "build-server": "tsc --project ./",
-    "lint-app": "eslint . --ext .vue",
-    "lint-server": "eslint . --ext .ts",
-    "lint-server-fix": "eslint . --ext .ts --fix",
+    "lint-app": "eslint ./app --config .eslintrc-app.js --ext .vue",
+    "lint-app-fix": "eslint ./app --config .eslintrc-app.js --ext .vue --fix",
+    "lint-server": "eslint ./server --config .eslintrc-server.js --ext .ts",
+    "lint-server-fix": "eslint ./server --config .eslintrc-server.js --ext .ts --fix",
     "server": "nodemon server/index.ts",
     "server-static": "npm run build-server && node dist/server/index.js",
     "test-app": "jest --config jest-app.config.js || exit 0",
