--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint-app-fix": "eslint ./app --config .eslintrc-app.js --ext .vue --fix",
     "lint-server": "eslint ./server --config .eslintrc-server.js --ext .ts",
     "lint-server-fix": "eslint ./server --config .eslintrc-server.js --ext .ts --fix",
-    "server": "nodemon server/index.ts",
-    "server-static": "npm run build-server && node dist/server/index.js",
+    "server": "nodemon server/server.ts",
+    "server-static": "npm run build-server && node dist/server/server.js",
     "test-app": "jest --config jest-app.config.js || exit 0",
     "test-server": "jest --config jest-server.config.js || exit 0"
   },
@@ -23,7 +23,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "helmet": "^4.1.1",
-    "nodemon": "^2.0.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -50,6 +49,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.4.2",
     "jest-puppeteer": "^4.4.0",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
     "puppeteer": "^5.3.0",
     "stylus": "^0.54.7",
