--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint-app-fix": "eslint ./app --config .eslintrc-app.js --ext .vue --fix",
     "lint-server": "eslint ./server --config .eslintrc-server.js --ext .ts",
     "lint-server-fix": "eslint ./server --config .eslintrc-server.js --ext .ts --fix",
-    "server": "nodemon server/server.ts",
-    "server-static": "npm run build-server && node dist/server/server.js",
+    "server": "nodemon server/core/server.ts",
+    "server-static": "npm run build-server && node dist/server/core/server.js",
     "test-app": "jest --config jest-app.config.js || exit 0",
     "test-server": "jest --config jest-server.config.js || exit 0"
   },
