--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
     "puppeteer": "^5.3.0",
+    "style-resources-loader": "^1.3.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "ts-node": "^9.0.0",
