--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "helmet": "^4.1.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -33,6 +35,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-handlebars": "^3.1.0",
+    "@types/sequelize": "^4.28.9",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -53,6 +56,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
     "puppeteer": "^5.3.0",
+    "sequelize-cli": "^6.2.0",
     "style-resources-loader": "^1.3.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
