--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "helmet": "^4.1.1",
+    "joi": "^17.2.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
     "vue": "^2.6.11",
@@ -35,7 +36,10 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-handlebars": "^3.1.0",
+    "@types/joi": "^14.3.4",
+    "@types/node": "^14.10.1",
     "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
