--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -38,6 +40,8 @@
     "@types/express-handlebars": "^3.1.0",
     "@types/joi": "^14.3.4",
     "@types/node": "^14.10.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
