--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "mysql2": "^2.1.0",
@@ -38,6 +39,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-handlebars": "^3.1.0",
+    "@types/express-session": "^1.17.0",
     "@types/joi": "^14.3.4",
     "@types/node": "^14.10.1",
     "@types/passport": "^1.0.4",
