Add compression npm package, move eslint declarations into respective folders

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
     "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
     "build-server": "tsc --project ./",
-    "lint-app": "eslint ./app --config .eslintrc-app.js --ext .vue",
-    "lint-app-fix": "eslint ./app --config .eslintrc-app.js --ext .vue --fix",
-    "lint-server": "eslint ./server --config .eslintrc-server.js --ext .ts",
-    "lint-server-fix": "eslint ./server --config .eslintrc-server.js --ext .ts --fix",
+    "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue",
+    "lint-app-fix": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
+    "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts",
+    "lint-server-fix": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
     "server": "nodemon server/core/server.ts",
     "server-static": "npm run build-server && node dist/server/core/server.js",
     "test-app": "jest --config jest-app.config.js || exit 0",
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
