--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-app-fix": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
     "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts",
     "lint-server-fix": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
-    "server": "nodemon server/core/server.ts",
+    "server": "nodemon server/core/server.ts --watch server",
     "server-static": "npm run build-server && node dist/server/core/server.js",
     "test-app": "jest --config jest-app.config.js || exit 0",
     "test-server": "jest --config jest-server.config.js || exit 0"
