--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.2.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -45,37 +45,37 @@
     "@types/express-handlebars": "^3.1.0",
     "@types/express-session": "^1.17.0",
     "@types/joi": "^14.3.4",
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.11.1",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.6",
+    "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-plugin-unit-jest": "^4.5.6",
+    "@vue/cli-plugin-vuex": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.9.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.4.2",
     "jest-puppeteer": "^4.4.0",
     "nodemon": "^2.0.4",
-    "prettier": "^1.19.1",
+    "prettier": "^2.1.2",
     "puppeteer": "^5.3.0",
     "sequelize-cli": "^6.2.0",
     "style-resources-loader": "^1.3.3",
-    "stylus": "^0.54.7",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
