--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-session-sequelize": "^7.0.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -28,12 +29,13 @@
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
-    "mysql2": "^2.2.1",
+    "joi-password-complexity": "^4.2.0",
+    "mysql2": "^2.2.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-beta.6",
+    "vue-router": "^4.0.0-beta.11",
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
@@ -65,7 +67,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.0.0-beta.3",
     "jest": "^26.4.2",
     "jest-puppeteer": "^4.4.0",
     "nodemon": "^2.0.4",
@@ -76,7 +78,7 @@
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
+    "typescript": "^4.0.3",
     "vue-template-compiler": "^2.6.12"
   }
 }
