--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
         "rootDir": "./server",
         "outDir": "./dist/server",
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "typeRoots": [
+            "server/types",
+        ]
     }
 }
