--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "resia",
   "version": "0.1.0",
+  "author": "Alan Morel",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
@@ -53,8 +55,8 @@
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-router": "^4.5.6",
@@ -64,7 +66,7 @@
     "@vue/compiler-sfc": "^3.0.0-0",
     "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
     "jest": "^26.4.2",
     "jest-puppeteer": "^4.4.0",
