--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test-server": "jest --config jest-server.config.js || exit 0"
   },
   "dependencies": {
+    "@alanmorel/vida": "0.0.11",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -77,7 +78,6 @@
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "vue-template-compiler": "^2.6.12"
+    "typescript": "^4.0.3"
   }
 }
