--- a/package.json
+++ b/package.json
@@ -1,83 +1,83 @@
 {
-  "name": "resia",
-  "version": "0.1.0",
-  "author": "Alan Morel",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
-    "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
-    "build-server": "tsc --project ./",
-    "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue",
-    "lint-app-fix": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
-    "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts",
-    "lint-server-fix": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
-    "server": "nodemon server/core/server.ts --watch server",
-    "server-static": "npm run build-server && node dist/server/core/server.js",
-    "test-app": "jest --config jest-app.config.js || exit 0",
-    "test-server": "jest --config jest-server.config.js || exit 0"
-  },
-  "dependencies": {
-    "@alanmorel/vida": "0.0.11",
-    "axios": "^0.20.0",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "connect-session-sequelize": "^7.0.3",
-    "cookie-parser": "^1.4.5",
-    "core-js": "^3.6.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.1.0",
-    "express-session": "^1.17.1",
-    "helmet": "^4.1.1",
-    "joi": "^17.2.1",
-    "joi-password-complexity": "^4.2.1",
-    "mysql2": "^2.2.5",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "sequelize": "^6.3.5",
-    "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-beta.11",
-    "vuex": "^4.0.0-beta.4"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/express-handlebars": "^3.1.0",
-    "@types/express-session": "^1.17.0",
-    "@types/joi": "^14.3.4",
-    "@types/node": "^14.11.2",
-    "@types/passport": "^1.0.4",
-    "@types/passport-local": "^1.0.33",
-    "@types/sequelize": "^4.28.9",
-    "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "@vue/cli-plugin-babel": "^4.5.6",
-    "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/cli-plugin-router": "^4.5.6",
-    "@vue/cli-plugin-unit-jest": "^4.5.6",
-    "@vue/cli-plugin-vuex": "^4.5.6",
-    "@vue/cli-service": "^4.5.6",
-    "@vue/compiler-sfc": "^3.0.0-0",
-    "@vue/test-utils": "^1.1.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
-    "jest": "^26.4.2",
-    "jest-puppeteer": "^4.4.0",
-    "nodemon": "^2.0.4",
-    "puppeteer": "^5.3.1",
-    "sequelize-cli": "^6.2.0",
-    "style-resources-loader": "^1.3.3",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
-  }
+    "name": "resia",
+    "version": "0.1.0",
+    "author": "Alan Morel",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
+        "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
+        "build-server": "tsc --project ./",
+        "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue",
+        "lint-app-fix": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
+        "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts",
+        "lint-server-fix": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
+        "server": "nodemon server/core/server.ts --watch server",
+        "server-static": "npm run build-server && node dist/server/core/server.js",
+        "test-app": "jest --config jest-app.config.js || exit 0",
+        "test-server": "jest --config jest-server.config.js || exit 0"
+    },
+    "dependencies": {
+        "@alanmorel/vida": "0.0.11",
+        "axios": "^0.21.1",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "connect-session-sequelize": "^7.1.0",
+        "cookie-parser": "^1.4.5",
+        "core-js": "^3.8.3",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-handlebars": "^5.2.0",
+        "express-session": "^1.17.1",
+        "helmet": "^4.4.1",
+        "joi": "^17.3.0",
+        "joi-password-complexity": "^5.0.2",
+        "mysql2": "^2.2.5",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "sequelize": "^6.5.0",
+        "vue": "^3.0.0-rc.13",
+        "vue-router": "^4.0.0-rc.6",
+        "vuex": "^4.0.0-rc.2"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/compression": "^1.7.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.9",
+        "@types/express": "^4.17.11",
+        "@types/express-handlebars": "^3.1.0",
+        "@types/express-session": "^1.17.3",
+        "@types/joi": "^17.2.3",
+        "@types/node": "^14.14.25",
+        "@types/passport": "^1.0.5",
+        "@types/passport-local": "^1.0.33",
+        "@types/sequelize": "^4.28.9",
+        "@types/validator": "^13.1.3",
+        "@typescript-eslint/eslint-plugin": "^4.14.2",
+        "@typescript-eslint/parser": "^4.14.2",
+        "@vue/cli-plugin-babel": "^4.5.11",
+        "@vue/cli-plugin-eslint": "^4.5.11",
+        "@vue/cli-plugin-router": "^4.5.11",
+        "@vue/cli-plugin-unit-jest": "^4.5.11",
+        "@vue/cli-plugin-vuex": "^4.5.11",
+        "@vue/cli-service": "^4.5.11",
+        "@vue/compiler-sfc": "^3.0.5",
+        "@vue/test-utils": "^1.1.3",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.19.0",
+        "eslint-plugin-vue": "^7.5.0",
+        "jest": "^26.6.3",
+        "jest-puppeteer": "^4.4.0",
+        "nodemon": "^2.0.7",
+        "puppeteer": "^7.0.1",
+        "sequelize-cli": "^6.2.0",
+        "style-resources-loader": "^1.4.1",
+        "stylus": "^0.54.8",
+        "stylus-loader": "^3.0.0",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3"
+    }
 }
