--- a/app/assets/manifest.json
+++ b/app/assets/manifest.json
@@ -1,43 +1,43 @@
 {
-    "name": "Resia",
-    "short_name": "Resia",
+    "name": "Resaic",
+    "short_name": "Resaic",
     "start_url": "/",
     "display": "standalone",
     "theme_color": "#000000",
     "background_color": "white",
-    "description": "Resia",
+    "description": "Resaic",
     "orientation": "portrait",
     "icons": [
-      {
-        "src": "/assets/favicons/mstile-150x150.png",
-        "sizes": "48x48",
-        "type": "image/png"
-      },
-      {
-        "src": "/assets/favicons/apple-touch-icon-72x72.png",
-        "sizes": "72x72",
-        "type": "image/png"
-      },
-      {
-        "src": "/assets/favicons/favicon-96x96.png",
-        "sizes": "96x96",
-        "type": "image/png"
-      },
-      {
-        "src": "/assets/favicons/apple-touch-icon-114x114.png",
-        "sizes": "114x114",
-        "type": "image/png"
-      },
-      {
-        "src": "/assets/favicons/mstile-150x150.png",
-        "sizes": "150x150",
-        "type": "image/png"
-      }
+        {
+            "src": "/assets/favicons/mstile-150x150.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "/assets/favicons/apple-touch-icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "/assets/favicons/favicon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/assets/favicons/apple-touch-icon-114x114.png",
+            "sizes": "114x114",
+            "type": "image/png"
+        },
+        {
+            "src": "/assets/favicons/mstile-150x150.png",
+            "sizes": "150x150",
+            "type": "image/png"
+        }
     ],
     "related_applications": [
-      {
-        "platform": "web",
-        "url": "http://localhost"
-      }
+        {
+            "platform": "web",
+            "url": "http://localhost"
+        }
     ]
-  }
+}
