--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,11 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: cd ${{ secrets.PROJECT_PATH }} && git pull && npm run build-server && npm run build-prod && ${{ secrets.RESTART_SERVER }}
+          script: |
+            cd ${{ secrets.PROJECT_PATH }}
+            git pull
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh  
+            npm run build-server
+            npm run build-prod
+            ${{ secrets.RESTART_SERVER }}
