--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v1
-      - name: Push to server
+      - name: Push to server, build, and restart
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
