--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "server": "nodemon server/core/server.ts --watch server",
         "server-static": "npm run build-server && node dist/server/core/server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
-        "test-server": "jest --config jest-server.config.js || exit 0"
+        "test-server": "jest --config jest-server.config.js || exit 0",
+        "start": "npm run build-prod && npm run server-static"
     },
     "dependencies": {
         "@alanmorel/vida": "0.0.11",
@@ -23,7 +24,7 @@
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "compression": "^1.7.4",
-        "connect-session-sequelize": "^7.1.0",
+        "connect-session-sequelize": "^7.1.1",
         "cookie-parser": "^1.4.5",
         "core-js": "^3.8.3",
         "cors": "^2.8.5",
@@ -32,8 +33,8 @@
         "express-handlebars": "^5.2.0",
         "express-session": "^1.17.1",
         "helmet": "^4.4.1",
-        "joi": "^17.3.0",
-        "joi-password-complexity": "^5.0.2",
+        "joi": "^17.4.0",
+        "joi-password-complexity": "^5.1.0",
         "mysql2": "^2.2.5",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
@@ -46,17 +47,17 @@
         "@types/bcrypt": "^3.0.0",
         "@types/compression": "^1.7.0",
         "@types/cookie-parser": "^1.4.2",
-        "@types/cors": "^2.8.9",
+        "@types/cors": "^2.8.10",
         "@types/express": "^4.17.11",
         "@types/express-handlebars": "^3.1.0",
         "@types/express-session": "^1.17.3",
-        "@types/node": "^14.14.25",
-        "@types/passport": "^1.0.5",
+        "@types/node": "^14.14.28",
+        "@types/passport": "^1.0.6",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.28.9",
         "@types/validator": "^13.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.14.2",
-        "@typescript-eslint/parser": "^4.14.2",
+        "@typescript-eslint/eslint-plugin": "^4.15.0",
+        "@typescript-eslint/parser": "^4.15.0",
         "@vue/cli-plugin-babel": "^4.5.11",
         "@vue/cli-plugin-eslint": "^4.5.11",
         "@vue/cli-plugin-router": "^4.5.11",
@@ -66,17 +67,17 @@
         "@vue/compiler-sfc": "^3.0.5",
         "@vue/test-utils": "^1.1.3",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.19.0",
-        "eslint-plugin-vue": "^7.5.0",
+        "eslint": "^7.20.0",
+        "eslint-plugin-vue": "^7.6.0",
         "jest": "^26.6.3",
         "jest-puppeteer": "^4.4.0",
         "nodemon": "^2.0.7",
-        "puppeteer": "^7.0.1",
+        "puppeteer": "^7.1.0",
         "sequelize-cli": "^6.2.0",
         "style-resources-loader": "^1.4.1",
         "stylus": "^0.54.8",
         "stylus-loader": "^3.0.0",
         "ts-node": "^9.1.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.5"
     }
 }
