--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,6 @@
         "rootDir": "./server",
         "outDir": "./dist/server",
         "esModuleInterop": true,
-        "strict": true,
-        "typeRoots": [
-            "server/types",
-        ]
-    },
-    "exclude": [ "server/types" ]
+        "strict": true
+    }
 }
