--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
         "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
         "build-server": "tsc --project ./",
-        "lint-app-fix": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
-        "lint-server-fix": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
+        "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
+        "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon server/core/server.ts --watch server",
         "server-static": "yarn build-server && node dist/server/core/server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
