--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,24 @@
-version: "3"
+version: "3.7"
+
 services:
-    db:
-        container_name: mysql
-        image: mysql:latest
-        volumes:
-            - db_data:/var/lib/mysql
-        restart: always
-        environment:
-            MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-            MYSQL_DATABASE: ${DATABASE_TABLE}
-            MYSQL_USER: ${DATABASE_USERNAME}
-            MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-        networks:
-            - resaic
-    app:
+    resaic:
+        build:
+            context: .
+            dockerfile: Dockerfile
+            target: base
         container_name: resaic
-        depends_on:
-            - db
+        volumes:
+            - .:/user/app
+            - /user/app/node_modules
+        command: yarn server
         restart: always
         build: .
         ports:
-            - "80:${PORT}"
+            - "${PORT}:${PORT}"
+        expose:
+            - "${PORT}"
         networks:
-            - resaic
+            - docker
 networks:
-    resaic:
-volumes:
-    db_data:
+    docker:
+        external: true
