--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon server/core/server.ts --watch server",
-        "server-static": "yarn build-server && node dist/server/core/server.js",
+        "server-static": "pm2-runtime dist/server/core/server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
-        "start": "yarn build-prod && yarn server-static"
+        "build-all": "yarn build-prod && yarn build-server",
+        "start": "yarn server"
     },
     "dependencies": {
         "@alanmorel/vida": "0.0.11",
