--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
-        "start": "yarn server"
+        "start": "yarn build-all && yarn server",
+        "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
     },
     "dependencies": {
         "@alanmorel/vida": "0.0.11",
@@ -73,9 +74,9 @@
         "nodemon": "^2.0.7",
         "puppeteer": "^7.1.0",
         "sequelize-cli": "^6.2.0",
+        "sass": "^1.32.7",
+        "sass-loader": "^10.0.1",
         "style-resources-loader": "^1.4.1",
-        "stylus": "^0.54.8",
-        "stylus-loader": "^3.0.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5"
     }
