--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon server/core/server.ts --watch server",
+        "server-docker": "nodemon --legacy-watch server/core/server.ts --watch server",
         "server-static": "pm2-runtime dist/server/core/server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
-        "start": "yarn build-all && yarn server",
+        "start": "yarn build-all && yarn server-docker",
         "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
     },
     "dependencies": {
