--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "author": "Alan Morel",
     "license": "MIT",
     "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AlanMorel/resaic.git"
+    },
     "scripts": {
         "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
         "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
@@ -27,11 +31,11 @@
         "compression": "^1.7.4",
         "connect-session-sequelize": "^7.1.1",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.8.3",
+        "core-js": "^3.9.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-handlebars": "^5.2.0",
+        "express-handlebars": "^5.2.1",
         "express-session": "^1.17.1",
         "helmet": "^4.4.1",
         "joi": "^17.4.0",
@@ -52,19 +56,19 @@
         "@types/express": "^4.17.11",
         "@types/express-handlebars": "^3.1.0",
         "@types/express-session": "^1.17.3",
-        "@types/node": "^14.14.28",
+        "@types/node": "^14.14.31",
         "@types/passport": "^1.0.6",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.28.9",
         "@types/validator": "^13.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.15.0",
-        "@typescript-eslint/parser": "^4.15.0",
-        "@vue/cli-plugin-babel": "^4.5.11",
-        "@vue/cli-plugin-eslint": "^4.5.11",
-        "@vue/cli-plugin-router": "^4.5.11",
-        "@vue/cli-plugin-unit-jest": "^4.5.11",
-        "@vue/cli-plugin-vuex": "^4.5.11",
-        "@vue/cli-service": "^4.5.11",
+        "@typescript-eslint/eslint-plugin": "^4.15.1",
+        "@typescript-eslint/parser": "^4.15.1",
+        "@vue/cli-plugin-babel": "^v5.0.0-alpha.4",
+        "@vue/cli-plugin-eslint": "^v5.0.0-alpha.4",
+        "@vue/cli-plugin-router": "^v5.0.0-alpha.4",
+        "@vue/cli-plugin-unit-jest": "^v5.0.0-alpha.4",
+        "@vue/cli-plugin-vuex": "^v5.0.0-alpha.4",
+        "@vue/cli-service": "^v5.0.0-alpha.4",
         "@vue/compiler-sfc": "^3.0.5",
         "@vue/test-utils": "^1.1.3",
         "babel-eslint": "^10.1.0",
@@ -75,9 +79,8 @@
         "nodemon": "^2.0.7",
         "puppeteer": "^7.1.0",
         "sequelize-cli": "^6.2.0",
-        "sass": "^1.32.7",
-        "sass-loader": "^10.0.1",
-        "style-resources-loader": "^1.4.1",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5"
     }
