--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 .DS_Store
 node_modules
-/dist
+dist
+
+# env files
 *.env
+
+# log files
+*.log
+
+# editor directories and files
 .vscode
-*-error.log
