--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
     },
     "dependencies": {
-        "@alanmorel/vida": "0.0.15",
+        "@alanmorel/vida": "^0.0.24",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
