--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
     },
     "dependencies": {
-        "@alanmorel/vida": "^0.0.25",
+        "@alanmorel/vida": "^0.0.27",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
@@ -56,24 +56,24 @@
         "@types/express": "^4.17.11",
         "@types/express-handlebars": "^3.1.0",
         "@types/express-session": "^1.17.3",
-        "@types/node": "^14.14.31",
+        "@types/node": "^14.14.35",
         "@types/passport": "^1.0.6",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.28.9",
         "@types/validator": "^13.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.16.1",
-        "@typescript-eslint/parser": "^4.16.1",
-        "@vue/cli-plugin-babel": "^v5.0.0-alpha.5",
-        "@vue/cli-plugin-eslint": "^v5.0.0-alpha.5",
-        "@vue/cli-plugin-router": "^v5.0.0-alpha.5",
-        "@vue/cli-plugin-unit-jest": "^v5.0.0-alpha.5",
-        "@vue/cli-plugin-vuex": "^v5.0.0-alpha.5",
-        "@vue/cli-service": "^v5.0.0-alpha.5",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
+        "@vue/cli-plugin-babel": "^5.0.0-alpha.8",
+        "@vue/cli-plugin-eslint": "^5.0.0-alpha.8",
+        "@vue/cli-plugin-router": "^5.0.0-alpha.8",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-alpha.8",
+        "@vue/cli-plugin-vuex": "^5.0.0-alpha.8",
+        "@vue/cli-service": "^5.0.0-alpha.8",
         "@vue/compiler-sfc": "^3.0.7",
         "@vue/test-utils": "^1.1.3",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.21.0",
-        "eslint-plugin-vue": "^7.6.0",
+        "eslint": "^7.22.0",
+        "eslint-plugin-vue": "^7.8.0",
         "jest": "^26.6.3",
         "jest-puppeteer": "^4.4.0",
         "nodemon": "^2.0.7",
@@ -82,6 +82,6 @@
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
         "ts-node": "^9.1.1",
-        "typescript": "^4.2.2"
+        "typescript": "^4.2.3"
     }
 }
