Use eslint plugin security, lint dockerfile

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon --config ./nodemon.config.json server/core/Server.ts --watch server",
         "server-docker": "nodemon --legacy-watch server/core/server.ts --watch server",
-        "server-static": "pm2-runtime dist/server/core/server.js",
+        "server-static": "pm2-runtime dist/server/core/server.js --env production --instances max",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
@@ -75,6 +75,7 @@
         "@vue/test-utils": "^1.2.2",
         "babel-eslint": "^10.1.0",
         "eslint": "^7.32.0",
+        "eslint-plugin-security": "^1.4.0",
         "eslint-plugin-vue": "^7.16.0",
         "jest": "^27.0.6",
         "jest-puppeteer": "^5.0.4",
