--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - ./server:/user/app/server
             - /user/app/node_modules
         env_file:
-            - ./.docker.env
+            - ./.env.docker
         restart: always
         ports:
             - "${PORT}:${PORT}"
