--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
         "url": "https://github.com/AlanMorel/resaic.git"
     },
     "scripts": {
-        "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
-        "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
+        "watch-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
+        "build-development": "vue-cli-service build --mode development --dest dist/development --target app",
+        "build-production": "vue-cli-service build --mode production --dest dist/production --target app --modern",
         "build-server": "tsc --project ./server/tsconfig.json && tscpaths -p ./server/tsconfig.json -s ./server -o ./dist/server",
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
-        "server-static": "node ./dist/server/core/Server.js",
+        "server-static": "yarn run build-server && node ./dist/server/core/Server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
-        "test-server": "jest --config jest-server.config.js || exit 0",
-        "build-all": "yarn build-prod && yarn build-server",
-        "docker-up-prod": "docker compose -f docker compose.yml -f docker compose.prod.yml up --detach"
+        "test-server": "jest --config jest-server.config.js || exit 0"
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
-        "axios": "^0.21.1",
+        "axios": "^0.21.4",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
-        "connect-session-sequelize": "^7.1.1",
+        "connect-session-sequelize": "^7.1.2",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.16.2",
+        "core-js": "^3.17.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -48,7 +47,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
-        "@types/compression": "^1.7.1",
+        "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
@@ -56,36 +55,36 @@
         "@types/express-session": "^1.17.4",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
-        "@types/node": "^16.6.1",
+        "@types/node": "^16.7.13",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
         "@types/validator": "^13.6.3",
-        "@typescript-eslint/eslint-plugin": "^4.29.2",
-        "@typescript-eslint/parser": "^4.29.2",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
         "@vue/cli-plugin-babel": "^5.0.0-beta.3",
         "@vue/cli-plugin-eslint": "^5.0.0-beta.3",
         "@vue/cli-plugin-router": "^5.0.0-beta.3",
         "@vue/cli-plugin-unit-jest": "^5.0.0-beta.3",
         "@vue/cli-plugin-vuex": "^5.0.0-beta.3",
         "@vue/cli-service": "^5.0.0-beta.3",
-        "@vue/compiler-sfc": "^3.2.4",
+        "@vue/compiler-sfc": "^3.2.10",
         "@vue/test-utils": "^1.2.2",
         "babel-eslint": "^10.1.0",
         "eslint": "^7.32.0",
         "eslint-plugin-security": "^1.4.0",
-        "eslint-plugin-vue": "^7.16.0",
-        "jest": "^27.0.6",
+        "eslint-plugin-vue": "^7.17.0",
+        "jest": "^27.1.1",
         "jest-puppeteer": "^5.0.4",
         "nodemon": "^2.0.12",
         "puppeteer": "^10.2.0",
-        "sass": "^1.38.0",
+        "sass": "^1.39.0",
         "sass-loader": "^12.1.0",
         "sequelize-cli": "^6.2.0",
-        "ts-node": "^10.2.0",
-        "tsc-alias": "^1.3.8",
-        "tsconfig-paths": "^3.10.1",
+        "ts-node": "^10.2.1",
+        "tsc-alias": "^1.3.9",
+        "tsconfig-paths": "^3.11.0",
         "tscpaths": "^0.0.9",
-        "typescript": "^4.3.5"
+        "typescript": "^4.4.2"
     }
 }
