Update scripts, encapsulate env variables

--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
     "name": "resaic",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "author": "Alan Morel",
     "license": "MIT",
     "private": true,
+    "description": "Resaic",
     "repository": {
         "type": "git",
         "url": "https://github.com/AlanMorel/resaic.git"
     },
     "scripts": {
-        "watch-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
-        "build-development": "vue-cli-service build --mode development --dest dist/development --target app",
-        "build-production": "vue-cli-service build --mode production --dest dist/production --target app --modern",
-        "build-server": "tsc --project ./server/tsconfig.json && tsc-alias -p ./server/tsconfig.json",
-        "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
-        "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
-        "server": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
-        "server-static": "yarn run build-server && node ./dist/server/core/Server.js",
-        "test-app": "jest --config jest-app.config.js || exit 0",
-        "test-server": "jest --config jest-server.config.js || exit 0"
+        "watch:development": "vue-cli-service build --mode development --dest dist/development --target app --watch",
+        "build:development": "vue-cli-service build --mode development --dest dist/development --target app",
+        "build:production": "vue-cli-service build --mode production --dest dist/production --target app --modern",
+        "build:server": "tsc --project ./server/tsconfig.json && tsc-alias -p ./server/tsconfig.json",
+        "lint:app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
+        "lint:server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
+        "server:watch": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
+        "server:run": "node ./dist/server/core/Server.js",
+        "test:app": "jest --config jest-app.config.js || exit 0",
+        "test:server": "jest --config jest-server.config.js || exit 0"
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
-        "axios": "^0.23.0",
+        "axios": "^0.24.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "chalk": "^4.1.2",
         "connect-session-sequelize": "^7.1.2",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.18.3",
+        "core-js": "^3.19.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -41,14 +42,14 @@
         "mysql2": "^2.3.2",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0",
-        "sequelize": "^6.7.0",
+        "sequelize": "^6.9.0",
         "vue": "^3.2.0-beta.8",
         "vue-router": "^4.0.0-rc.6",
         "vuex": "^4.0.0-rc.2"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "7.15.8",
-        "@babel/preset-typescript": "^7.15.0",
+        "@babel/eslint-parser": "7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
         "@types/bcrypt": "^5.0.0",
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
@@ -58,39 +59,39 @@
         "@types/express-session": "^1.17.4",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
-        "@types/node": "^16.11.2",
+        "@types/node": "^16.11.6",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
-        "@types/validator": "^13.6.4",
-        "@typescript-eslint/eslint-plugin": "^5.1.0",
-        "@typescript-eslint/parser": "^5.1.0",
-        "@vue/cli-plugin-babel": "^5.0.0-beta.6",
-        "@vue/cli-plugin-eslint": "^5.0.0-beta.6",
-        "@vue/cli-plugin-router": "^5.0.0-beta.6",
-        "@vue/cli-plugin-typescript": "^5.0.0-beta.6",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.6",
-        "@vue/cli-plugin-vuex": "^5.0.0-beta.6",
-        "@vue/cli-service": "^5.0.0-beta.6",
-        "@vue/compiler-sfc": "^3.2.20",
+        "@types/validator": "^13.6.6",
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
+        "@vue/cli-plugin-babel": "^5.0.0-beta.7",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.7",
+        "@vue/cli-plugin-router": "^5.0.0-beta.7",
+        "@vue/cli-plugin-typescript": "^5.0.0-beta.7",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.7",
+        "@vue/cli-plugin-vuex": "^5.0.0-beta.7",
+        "@vue/cli-service": "^5.0.0-beta.7",
+        "@vue/compiler-sfc": "^3.2.21",
         "@vue/eslint-config-prettier": "^6.0.0",
-        "@vue/eslint-config-typescript": "^8.0.0",
+        "@vue/eslint-config-typescript": "^9.0.1",
         "@vue/test-utils": "^1.2.2",
-        "eslint": "^8.0.1",
+        "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-formatter-codeframe": "7.32.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-security": "^1.4.0",
-        "eslint-plugin-vue": "^7.20.0",
+        "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.3.1",
         "jest-puppeteer": "^6.0.0",
         "nodemon": "^2.0.14",
         "prettier": "^2.4.1",
-        "puppeteer": "^10.4.0",
-        "sass": "^1.43.3",
-        "sass-loader": "^12.2.0",
-        "sequelize-cli": "^6.2.0",
-        "ts-node": "^10.3.1",
+        "puppeteer": "^11.0.0",
+        "sass": "^1.43.4",
+        "sass-loader": "^12.3.0",
+        "sequelize-cli": "^6.3.0",
+        "ts-node": "^10.4.0",
         "tsc-alias": "^1.3.10",
         "tsconfig-paths": "^3.11.0",
         "typescript": "^4.4.4"
