Update deps, move timezone to env file

--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
         "@types/express": "^4.17.13",
         "@types/express-handlebars": "^5.3.1",
         "@types/express-session": "^1.17.4",
-        "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
         "@types/node": "^16.11.6",
         "@types/passport": "^1.0.7",
@@ -66,18 +65,17 @@
         "@types/validator": "^13.6.6",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
-        "@vue/cli-plugin-babel": "^5.0.0-beta.7",
-        "@vue/cli-plugin-eslint": "^5.0.0-beta.7",
-        "@vue/cli-plugin-router": "^5.0.0-beta.7",
-        "@vue/cli-plugin-typescript": "^5.0.0-beta.7",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.7",
-        "@vue/cli-plugin-vuex": "^5.0.0-beta.7",
-        "@vue/cli-service": "^5.0.0-beta.7",
+        "@vue/cli-plugin-babel": "^5.0.0-rc.0",
+        "@vue/cli-plugin-eslint": "^5.0.0-rc.0",
+        "@vue/cli-plugin-router": "^5.0.0-rc.0",
+        "@vue/cli-plugin-typescript": "^5.0.0-rc.0",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-rc.0",
+        "@vue/cli-plugin-vuex": "^5.0.0-rc.0",
+        "@vue/cli-service": "^5.0.0-rc.0",
         "@vue/compiler-sfc": "^3.2.21",
-        "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^9.0.1",
         "@vue/test-utils": "^1.2.2",
-        "eslint": "^8.1.0",
+        "eslint": "^8.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-formatter-codeframe": "7.32.1",
         "eslint-plugin-prettier": "^4.0.0",
